Fix header layout bug

--- a/src/assets/scss/pages/todolistDetail.scss
+++ b/src/assets/scss/pages/todolistDetail.scss
@@ -94,11 +94,11 @@
     }
     .todolist__header__priority {
       text-align: center;
-      width: 100px;
+      width: 102px;
     }
     .todolist__header__startDate {
       text-align: center;
-      width: 70px;
+      width: 80px;
     }
     .todolist__header__tilde {
       text-align: center;
@@ -106,7 +106,7 @@
     }
     .todolist__header__deadline {
       text-align: center;
-      width: 70px;
+      width: 80px;
     }
     .todolist__header__buttons {
       text-align: center;
