--- a/src/assets/scss/partials/header.scss
+++ b/src/assets/scss/partials/header.scss
@@ -19,6 +19,7 @@
         margin-left: 30px;
       }
       &:last-child {
+        font-size: 16px;
         margin-right: 30px;
         justify-self: end;
         font-weight: 600;
@@ -38,7 +39,7 @@
         justify-self: center;
         font-weight: 600;
         color: white;
-        font-size: 27px;
+        font-size: 30px;
         text-shadow: 1px 1px #4b4b4b;
       }
     }
