--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Jua:400);@charset "UTF-8";
 html,
 body,
 div,
@@ -158,7 +158,7 @@ body {
 
 body,
 body * {
-  font-family: "Hanna", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
+  font-family: "Jua", sans-serif; }
 
 main {
   width: 100%;
@@ -204,6 +204,7 @@ a:active {
     .header .header__wrapper .header__column:first-child {
       margin-left: 30px; }
     .header .header__wrapper .header__column:last-child {
+      font-size: 16px;
       margin-right: 30px;
       justify-self: end;
       font-weight: 600; }
@@ -223,7 +224,7 @@ a:active {
       justify-self: center;
       font-weight: 600;
       color: white;
-      font-size: 27px;
+      font-size: 30px;
       text-shadow: 1px 1px #4b4b4b; }
 
 footer {
@@ -520,7 +521,7 @@ footer {
     pointer-events: none; } }
 
 .todolist-container {
-  width: 600px;
+  width: 650px;
   height: 300px;
   display: -webkit-box;
   display: -webkit-flex;
@@ -987,7 +988,7 @@ footer {
 .task-container {
   position: relative;
   width: 100%;
-  max-width: 600px;
+  max-width: 650px;
   height: 30px;
   margin-top: 20px;
   display: -webkit-box;
@@ -1054,7 +1055,7 @@ footer {
             user-select: none; }
   .task-container .task__startDate,
   .task-container .task__deadline {
-    width: 75px; }
+    width: 80px; }
   .task-container .task__modifyBtn {
     justify-self: end;
     -webkit-user-select: none;
@@ -1133,7 +1134,7 @@ footer {
           align-items: center; }
   .container .todolist__options {
     position: relative;
-    width: 600px;
+    width: 650px;
     border: 1px solid #dfe6e9;
     display: -webkit-box;
     display: -webkit-flex;
@@ -1215,7 +1216,7 @@ footer {
     padding: 15px; }
   .container .todolist__header {
     width: 100%;
-    max-width: 600px;
+    max-width: 650px;
     height: 25px;
     display: -webkit-box;
     display: -webkit-flex;
@@ -1235,15 +1236,15 @@ footer {
       height: 100%; }
     .container .todolist__header .todolist__header__priority {
       text-align: center;
-      width: 100px; }
+      width: 102px; }
     .container .todolist__header .todolist__header__startDate {
       text-align: center;
-      width: 70px; }
+      width: 80px; }
     .container .todolist__header .todolist__header__tilde {
       text-align: center;
       width: 38px; }
     .container .todolist__header .todolist__header__deadline {
       text-align: center;
-      width: 70px; }
+      width: 80px; }
     .container .todolist__header .todolist__header__buttons {
       text-align: center; }
